parameter/v1.8.4/controller-manager.md
A detailed description of the command-line flag of controller-manager



### address

- address ip

    The IP address to serve on (set to 0.0.0.0 for all interfaces) (default 0.0.0.0)

- port int32

    The port that the controller-manager's http service runs on (default 10252)



### admission

- ir-data-source string

    Data source used by InitialResources. Supported options: influxdb, gcm. (default "influxdb")

- ir-dbname string

    InfluxDB database name which contains metrics required by InitialResources (default "k8s")

- ir-hawkular string

    Hawkular configuration URL

- ir-influxdb-host string

    Address of InfluxDB which contains metrics required by InitialResources (default "localhost:8080/api/v1/namespaces/kube-system/services/monitoring-influxdb:api/proxy")

- ir-namespace-only

    Whether the estimation should be made only based on data from the same namespace.

- ir-password string

    Password used for connecting to InfluxDB (default "root")

- ir-percentile int

    Which percentile of samples should InitialResources use when estimating resources. For experiment purposes. (default 90)

- ir-user string

    User used for connecting to InfluxDB (default "root")



### api

- kube-api-burst int32

    Burst to use while talking with kubernetes apiserver (default 30)

- kube-api-content-type string

    Content type of requests sent to apiserver. (default "application/vnd.kubernetes.protobuf")

- kube-api-qps float32

    QPS to use while talking with kubernetes apiserver (default 20)

- master string

    The address of the Kubernetes API server (overrides any value in kubeconfig)



### cloud

- allocate-node-cidrs

    Should CIDRs for Pods be allocated and set on the cloud provider.

- azure-container-registry-config string

    Path to the file container Azure container registry configuration information.

- cloud-config string

    The path to the cloud provider configuration file.  Empty string for no configuration file.

- cloud-provider string

    The provider for cloud services.  Empty string for no provider.

- cloud-provider-gce-lb-src-cidrs cidrs

    CIDRS opened in GCE firewall for LB traffic proxy & health checks (default 209.85.204.0/22,130.211.0.0/22,35.191.0.0/16,209.85.152.0/22)

- configure-cloud-routes

    Should CIDRs allocated by allocate-node-cidrs be configured on the cloud provider. (default true)

- google-json-key string

    The Google Cloud Platform Service Account JSON Key to use for authentication.

- route-reconciliation-period duration

    The period for reconciling routes created for Nodes by cloud provider. (default 10s)



### container

- container-hints string

    location of the container hints file (default "/etc/cadvisor/container_hints.json")

- docker string

    docker endpoint (default "unix:///var/run/docker.sock")

- docker-env-metadata-whitelist string

    a comma-separated list of environment variable keys that needs to be collected for docker containers

- docker-only

    Only report docker containers in addition to root stats

- docker-root string

    DEPRECATED: docker root is read from docker info (this is a fallback, default: /var/lib/docker) (default "/var/lib/docker")

- docker-tls

    use TLS to connect to docker

- docker-tls-ca string

    path to trusted CA (default "ca.pem")

- docker-tls-cert string

    path to client certificate (default "cert.pem")

- docker-tls-key string

    path to private key (default "key.pem")



### controller

- controller-start-interval duration

    Interval between starting controller managers.

- controllers stringSlice

    A list of controllers to enable.  '*' enables all on-by-default controllers, 'foo' enables the controller named 'foo', '-foo' disables the controller named 'foo'.
```
All controllers: attachdetach, bootstrapsigner, cronjob, csrapproving, csrsigning, daemonset, deployment, disruption, endpoint, garbagecollector, horizontalpodautoscaling, job, namespace, node, persistentvolume-binder, persistentvolume-expander, podgc, replicaset, replicationcontroller, resourcequota, route, service, serviceaccount, serviceaccount-token, statefulset, tokencleaner, ttl
Disabled-by-default controllers: bootstrapsigner, tokencleaner (default [*])
```

- deployment-controller-sync-period duration

    Period for syncing the deployments. (default 30s)

- enable-taint-manager

    WARNING: Beta feature. If set to true enables NoExecute Taints and will evict all not-tolerating Pod running on Nodes tainted with this kind of Taints. (default true)

- min-resync-period duration

    The resync period in reflectors will be random between MinResyncPeriod and 2*MinResyncPeriod (default 12h0m0s)

- namespace-sync-period duration

    The period for syncing namespace life-cycle updates (default 5m0s)

- resource-quota-sync-period duration

    The period for syncing quota usage status in the system (default 5m0s)



### event

- event-storage-age-limit string

    Max length of time for which to store events (per type). Value is a comma separated list of key values, where the keys are event types (e.g.: creation, oom) or "default" and the value is a duration. Default is applied to all non-specified event types (default "default=0")

- event-storage-event-limit string

    Max number of events to store (per type). Value is a comma separated list of key values, where the keys are event types (e.g.: creation, oom) or "default" and the value is an integer. Default is applied to all non-specified event types (default "default=0")



### feature

- feature-gates mapStringBool

    A set of key=value pairs that describe feature gates for alpha/experimental features. Options are:
```
APIListChunking=true|false (ALPHA - default=false)
APIResponseCompression=true|false (ALPHA - default=false)
Accelerators=true|false (ALPHA - default=false)
AdvancedAuditing=true|false (BETA - default=true)
AllAlpha=true|false (ALPHA - default=false)
AllowExtTrafficLocalEndpoints=true|false (default=true)
AppArmor=true|false (BETA - default=true)
CPUManager=true|false (ALPHA - default=false)
CustomResourceValidation=true|false (ALPHA - default=false)
DebugContainers=true|false (ALPHA - default=false)
DevicePlugins=true|false (ALPHA - default=false)
DynamicKubeletConfig=true|false (ALPHA - default=false)
EnableEquivalenceClassCache=true|false (ALPHA - default=false)
ExpandPersistentVolumes=true|false (ALPHA - default=false)
ExperimentalCriticalPodAnnotation=true|false (ALPHA - default=false)
ExperimentalHostUserNamespaceDefaulting=true|false (BETA - default=false)
HugePages=true|false (ALPHA - default=false)
Initializers=true|false (ALPHA - default=false)
KubeletConfigFile=true|false (ALPHA - default=false)
LocalStorageCapacityIsolation=true|false (ALPHA - default=false)
MountPropagation=true|false (ALPHA - default=false)
PersistentLocalVolumes=true|false (ALPHA - default=false)
PodPriority=true|false (ALPHA - default=false)
RotateKubeletClientCertificate=true|false (BETA - default=true)
RotateKubeletServerCertificate=true|false (ALPHA - default=false)
ServiceNodeExclusion=true|false (ALPHA - default=false)
StreamingProxyRedirects=true|false (BETA - default=true)
SupportIPVSProxyMode=true|false (ALPHA - default=false)
TaintBasedEvictions=true|false (ALPHA - default=false)
TaintNodesByCondition=true|false (ALPHA - default=false)
```



### general

- boot-id-file string

    Comma-separated list of files to check for boot-id. Use the first one that exists. (default "/proc/sys/kernel/random/boot_id")

- cluster-name string

    The instance prefix for the cluster (default "kubernetes")

- enable-garbage-collector

    Enables the generic garbage collector. MUST be synced with the corresponding flag of the kube-apiserver. (default true)

- enable-load-reader

    Whether to enable cpu load reader

- help

    help for hyperkube

- insecure-experimental-approve-all-kubelet-csrs-for-group string

    This flag does nothing.

- kubeconfig string

    Path to kubeconfig file with authorization and master location information.

- machine-id-file string

    Comma-separated list of files to check for machine-id. Use the first one that exists. (default "/etc/machine-id,/var/lib/dbus/machine-id")

- version version[=true]

    Print version information and quit



### ha

- leader-elect

    Start a leader election client and gain leadership before executing the main loop. Enable this when running replicated components for high availability. (default true)

- leader-elect-lease-duration duration

    The duration that non-leader candidates will wait after observing a leadership renewal until attempting to acquire leadership of a led but unrenewed leader slot. This is effectively the maximum duration that a leader can be stopped before it is replaced by another candidate. This is only applicable if leader election is enabled. (default 15s)

- leader-elect-renew-deadline duration

    The interval between attempts by the acting master to renew a leadership slot before it stops leading. This must be less than or equal to the lease duration. This is only applicable if leader election is enabled. (default 10s)

- leader-elect-resource-lock endpoints

    The type of resource object that is used for locking during leader election. Supported options are endpoints (default) and `configmap`. (default "endpoints")

- leader-elect-retry-period duration

    The duration the clients should wait between attempting acquisition and renewal of a leadership. This is only applicable if leader election is enabled. (default 2s)



### limiter

- concurrent-deployment-syncs int32

    The number of deployment objects that are allowed to sync concurrently. Larger number = more responsive deployments, but more CPU (and network) load (default 5)

- concurrent-endpoint-syncs int32

    The number of endpoint syncing operations that will be done concurrently. Larger number = faster endpoint updating, but more CPU (and network) load (default 5)

- concurrent-gc-syncs int32

    The number of garbage collector workers that are allowed to sync concurrently. (default 20)

- concurrent-namespace-syncs int32

    The number of namespace objects that are allowed to sync concurrently. Larger number = more responsive namespace termination, but more CPU (and network) load (default 10)

- concurrent-rc-syncs int32

    The number of replication controllers that are allowed to sync concurrently. Larger number = more responsive replica management, but more CPU (and network) load (default 5)

- concurrent-replicaset-syncs int32

    The number of replica sets that are allowed to sync concurrently. Larger number = more responsive replica management, but more CPU (and network) load (default 5)

- concurrent-resource-quota-syncs int32

    The number of resource quotas that are allowed to sync concurrently. Larger number = more responsive quota management, but more CPU (and network) load (default 5)

- concurrent-service-syncs int32

    The number of services that are allowed to sync concurrently. Larger number = more responsive service management, but more CPU (and network) load (default 1)

- concurrent-serviceaccount-token-syncs int32

    The number of service account token objects that are allowed to sync concurrently. Larger number = more responsive token generation, but more CPU (and network) load (default 5)

- default-not-ready-toleration-seconds int

    Indicates the tolerationSeconds of the toleration for notReady:NoExecute that is added by default to every pod that does not already have such a toleration. (default 300)

- default-unreachable-toleration-seconds int

    Indicates the tolerationSeconds of the toleration for unreachable:NoExecute that is added by default to every pod that does not already have such a toleration. (default 300)



### log

- alsologtostderr

    log to standard error as well as files

- log-backtrace-at traceLocation

    when logging hits line file:N, emit a stack trace (default :0)

- log-cadvisor-usage

    Whether to log the usage of the cAdvisor container

- log-dir string

    If non-empty, write log files in this directory

- log-flush-frequency duration

    Maximum number of seconds between log flushes (default 5s)

- loglevel int

    Log level (0 = DEBUG, 5 = FATAL) (default 1)

- logtostderr

    log to standard error instead of files (default true)

- stderrthreshold severity

    logs at or above this threshold go to stderr (default 2)

- v Level

    log level for V logs

- vmodule moduleSpec

    comma-separated list of pattern=N settings for file-filtered logging



### monitor

- application-metrics-count-limit int

    Max number of application metrics to store (per container) (default 100)

- global-housekeeping-interval duration

    Interval between global housekeepings (default 1m0s)

- housekeeping-interval duration

    Interval between container housekeepings (default 10s)



### node

- large-cluster-size-threshold int32

    Number of nodes from which NodeController treats the cluster as large for the eviction logic purposes. --secondary-node-eviction-rate is implicitly overridden to 0 for clusters this size or smaller. (default 50)

- node-cidr-mask-size int32

    Mask size for node cidr in cluster. (default 24)

- node-eviction-rate float32

    Number of nodes per second on which pods are deleted in case of node failure when a zone is healthy (see --unhealthy-zone-threshold for definition of healthy/unhealthy). Zone refers to entire cluster in non-multizone clusters. (default 0.1)

- node-monitor-grace-period duration

    Amount of time which we allow running Node to be unresponsive before marking it unhealthy. Must be N times more than kubelet's nodeStatusUpdateFrequency, where N means number of retries allowed for kubelet to post node status. (default 40s)

- node-monitor-period duration

    The period for syncing NodeStatus in NodeController. (default 5s)

- node-startup-grace-period duration

    Amount of time which we allow starting Node to be unresponsive before marking it unhealthy. (default 1m0s)

- secondary-node-eviction-rate float32

    Number of nodes per second on which pods are deleted in case of node failure when a zone is unhealthy (see --unhealthy-zone-threshold for definition of healthy/unhealthy). Zone refers to entire cluster in non-multizone clusters. This value is implicitly overridden to 0 if the cluster size is smaller than --large-cluster-size-threshold. (default 0.01)

- unhealthy-zone-threshold float32

    Fraction of Nodes in a zone which needs to be not Ready (minimum 3) for zone to be treated as unhealthy.  (default 0.55)



### pod

- cidr-allocator-type string

    Type of CIDR allocator to use (default "RangeAllocator")

- cluster-cidr string

    CIDR Range for Pods in cluster.

- horizontal-pod-autoscaler-downscale-delay duration

    The period since last downscale, before another downscale can be performed in horizontal pod autoscaler. (default 5m0s)

- horizontal-pod-autoscaler-sync-period duration

    The period for syncing the number of pods in horizontal pod autoscaler. (default 30s)

- horizontal-pod-autoscaler-upscale-delay duration

    The period since last upscale, before another upscale can be performed in horizontal pod autoscaler. (default 3m0s)

- horizontal-pod-autoscaler-use-rest-clients

    WARNING: alpha feature.  If set to true, causes the horizontal pod autoscaler controller to use REST clients through the kube-aggregator, instead of using the legacy metrics client through the API server proxy.  This is required for custom metrics support in the horizontal pod autoscaler.

- pod-eviction-timeout duration

    The grace period for deleting pods on failed nodes. (default 5m0s)

- terminated-pod-gc-threshold int32

    Number of terminated pods that can exist before the terminated pod garbage collector starts deleting terminated pods. If <= 0, the terminated pod garbage collector is disabled. (default 12500)



### profiling

- contention-profiling

    Enable lock contention profiling, if profiling is enabled

- profiling

    Enable profiling via web interface host:port/debug/pprof/ (default true)



### service

- service-cluster-ip-range string

    CIDR Range for Services in cluster.

- service-sync-period duration

    The period for syncing services with their external load balancers (default 5m0s)



### storage

- storage-driver-buffer-duration duration

    Writes in the storage driver will be buffered for this duration, and committed to the non memory backends as a single transaction (default 1m0s)

- storage-driver-db string

    database name (default "cadvisor")

- storage-driver-host string

    database host:port (default "localhost:8086")

- storage-driver-password string

    database password (default "root")

- storage-driver-secure

    use secure connection with database

- storage-driver-table string

    table name (default "stats")

- storage-driver-user string

    database username (default "root")



### tls

- allow-verification-with-non-compliant-keys

    Allow a SignatureVerifier to use keys which are technically non-compliant with RFC6962.

- cluster-signing-cert-file string

    Filename containing a PEM-encoded X509 CA certificate used to issue cluster-scoped certificates (default "/etc/kubernetes/ca/ca.pem")

- cluster-signing-key-file string

    Filename containing a PEM-encoded RSA or ECDSA private key used to sign cluster-scoped certificates (default "/etc/kubernetes/ca/ca.key")

- experimental-cluster-signing-duration duration

    The length of duration signed certificates will be given. (default 8760h0m0s)

- root-ca-file string

    If set, this root certificate authority will be included in service account's token secret. This must be a valid PEM-encoded CA bundle.

- service-account-private-key-file string

    Filename containing a PEM-encoded private RSA or ECDSA key used to sign service account tokens.

- use-service-account-credentials

    If true, use individual service account credentials for each controller.



### volume

- attach-detach-reconcile-sync-period duration

    The reconciler sync wait time between volume attach detach. This duration must be larger than one second, and increasing this value from the default may allow for volumes to be mismatched with pods. (default 1m0s)

- disable-attach-detach-reconcile-sync

    Disable volume attach detach reconciler sync. Disabling this may cause volumes to be mismatched with pods. Use wisely.

- enable-dynamic-provisioning

    Enable dynamic provisioning for environments that support it. (default true)

- enable-hostpath-provisioner

    Enable HostPath PV provisioning when running without a cloud provider. This allows testing and development of provisioning features.  HostPath provisioning is not supported in any way, won't work in a multi-node cluster, and should not be used for anything other than testing or development.

- flex-volume-plugin-dir string

    Full path of the directory in which the flex volume plugin should search for additional third party volume plugins. (default "/usr/libexec/kubernetes/kubelet-plugins/volume/exec/")

- pv-recycler-increment-timeout-nfs int32

    the increment of time added per Gi to ActiveDeadlineSeconds for an NFS scrubber pod (default 30)

- pv-recycler-minimum-timeout-hostpath int32

    The minimum ActiveDeadlineSeconds to use for a HostPath Recycler pod.  This is for development and testing only and will not work in a multi-node cluster. (default 60)

- pv-recycler-minimum-timeout-nfs int32

    The minimum ActiveDeadlineSeconds to use for an NFS Recycler pod (default 300)

- pv-recycler-pod-template-filepath-hostpath string

    The file path to a pod definition used as a template for HostPath persistent volume recycling. This is for development and testing only and will not work in a multi-node cluster.

- pv-recycler-pod-template-filepath-nfs string

    The file path to a pod definition used as a template for NFS persistent volume recycling

- pv-recycler-timeout-increment-hostpath int32

    the increment of time added per Gi to ActiveDeadlineSeconds for a HostPath scrubber pod.  This is for development and testing only and will not work in a multi-node cluster. (default 30)

- pvclaimbinder-sync-period duration

    The period for syncing persistent volumes and persistent volume claims (default 15s)

